fixed dates not showing in rent editing page

--- a/src/app/edit-rent/edit-rent.component.css
+++ b/src/app/edit-rent/edit-rent.component.css
@@ -3,7 +3,7 @@
 }
 
 .backbutton {
-    z-index: 1000 !important;
+    z-index: 1050 !important;
 }
 
 .modal-holder {
